--- a/css/garcia.css
+++ b/css/garcia.css
@@ -115,7 +115,7 @@ justify-content: space-around !important;
 /* start header */
 
 header {
-    background-image: url('../images/hero-bg.jpg');
+    background-image: url('../images/hero-bg.jpg') !important;
     background-attachment: fixed;
     background-position: center top;
     background-repeat: no-repeat;
